All JavaCompile/etc tasks need these params